--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "bootstrap": "^3.3.7",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
