--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "website",
+  "name": "Jeremy Aftem",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
